--- a/index.html
+++ b/index.html
@@ -1,28 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Appex Group</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <h1>I love Zobo</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis molestiae architecto libero odit! Modi dolorem alias, ab facilis dolor quisquam non veniam corporis nobis adipisci voluptates inventore, aspernatur natus consequatur!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis molestiae architecto libero odit! Modi
+        dolorem alias, ab facilis dolor quisquam non veniam corporis nobis adipisci voluptates inventore, aspernatur
+        natus consequatur!</p>
     <section>
         <div>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed deleniti adipisci et reiciendis iste sit nisi. Eius ratione beatae, voluptatem, optio accusantium repellat est, assumenda quas tempora excepturi sed atque.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed deleniti adipisci et reiciendis iste sit
+                nisi. Eius ratione beatae, voluptatem, optio accusantium repellat est, assumenda quas tempora excepturi
+                sed atque.</p>
         </div>
         <div>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed deleniti adipisci et reiciendis iste sit nisi. Eius
-                            ratione beatae, voluptatem, optio accusantium repellat est, assumenda quas tempora excepturi sed atque.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed deleniti adipisci et reiciendis iste sit
+                nisi. Eius
+                ratione beatae, voluptatem, optio accusantium repellat est, assumenda quas tempora excepturi sed atque.
+            </p>
 
         </div>
         <div>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed deleniti adipisci et reiciendis iste sit nisi. Eius
-                            ratione beatae, voluptatem, optio accusantium repellat est, assumenda quas tempora excepturi sed atque.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed deleniti adipisci et reiciendis iste sit
+                nisi. Eius
+                ratione beatae, voluptatem, optio accusantium repellat est, assumenda quas tempora excepturi sed atque.
+            </p>
 
         </div>
     </section>
 </body>
+
 </html>
