--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
         </div>
         <h1>Utibe is cool</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae omnis itaque architecto. Debitis odit neque, suscipit necessitatibus id aperiam. Quis, natus nostrum fugiat nemo velit debitis similique sunt alias eius!</p>
     </section>
 </body>
 
