--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         dolorem alias, ab facilis dolor quisquam non veniam corporis nobis adipisci voluptates inventore, aspernatur
         natus consequatur!</p>
     <section>
-        <div>
+        <div id="three">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed deleniti adipisci et reiciendis iste sit
                 nisi. Eius ratione beatae, voluptatem, optio accusantium repellat est, assumenda quas tempora excepturi
                 sed atque.</p>
         </div>
-        <div>
+        <div id="one">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed deleniti adipisci et reiciendis iste sit
                 nisi. Eius
                 ratione beatae, voluptatem, optio accusantium repellat est, assumenda quas tempora excepturi sed atque.
             </p>
 
         </div>
-        <div>
+        <div id="two">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed deleniti adipisci et reiciendis iste sit
                 nisi. Eius
                 ratione beatae, voluptatem, optio accusantium repellat est, assumenda quas tempora excepturi sed atque.
