--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae omnis itaque architecto. Debitis odit neque, suscipit necessitatibus id aperiam. Quis, natus nostrum fugiat nemo velit debitis similique sunt alias eius!</p>
         <h2>Daniel is not cool</h2>
     </section>
+    <form action="">
+        <input type="text"  placeholder="name">
+        <input type="text" placeholder="lastname">
+        <button>LOGIN</button>
+    </form>
 </body>
 
 </html>
